    - Allow 1-damage hits to still train relevant skills; in NetHack, hitting
      with a weapon at unskilled gives -2 to damage, so weapons that couldn't
      roll at least a 4 on damage wouldn't be trained at all!
    - Accelerate heavyshot skill training: hitting with a heavyshot weapon
      trains the relevant skill by 1dX points similar to its damage multiplier.
    - Effect of skills on to-hit and damage raised in general (from dNetHack):
        - Expert weapon skill gives +5/+3 to-hit/damage (was +3/+2).
        - Expert two-weapon skill gives -2/+3 to-hit/damage (was -3/+2).
        - Skilled riding gives +2 to damage (was +1).
        - Expert riding gives +2/+5 to-hit/damage (was +0/+2).
        - Restricted weapon skill gives -5 to damage (was -2).
* Increased sling damage: slings now get the strength damage bonus (otherwise
  reserved for melee) and sling enchantment affects damage of fired projectiles
  (normally launcher enchantment only affects to-hit); their damage now even
  competes with thrown daggers!
* Teleport control allows teleportation to be cancelled without using a turn and
  in the case of deliberate teleports consuming hunger.
* Fix C343-238: "(Unix and VMS only) The 'Who are you?' prompt does not accept
  digits in the response."  The official bug description is inaccurate: it's
  names that START with a digit that aren't accepted by vault guards, and it
  applies to all platforms.
* Fix ring of sustain ability blocking -1 strength change when becoming weak
  from hunger, allowing it to be exploited to gain strength on demand.

Dungeon
-------
* Changes to Gehennom:
    - Mazes completely removed from Gehennom!  Both fill levels and filler
      around special levels consist of lava caverns.
    - Add demon lairs for Demogorgon, Geryon, Dispater, and Yeenoghu (from
      GruntHack).
* Changes to the Town branch:
    - Nymph level is now guaranteed and appears between the Town surface and
      filler levels.